--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,20 @@
-.App {
-  text-align: center;
+.App__logo {
+  animation: App__logo-spin infinite 20s linear;
+  height: 10vmin;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App__header {
+  background-color: #ccc;
+  height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(10px + 1vmin);
+  color: #333;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes App__logo-spin {
   from {
     transform: rotate(0deg);
   }
